[gd_scene load_steps=13 format=3 uid="uid://dq64kjqwly66a"]

[ext_resource type="Script" path="res://maps/projector.gd" id="1_14a2k"]
[ext_resource type="Texture2D" uid="uid://70mha7amjdxi" path="res://textures/projector.png" id="2_eagai"]
[ext_resource type="Texture2D" uid="uid://bop8vtseh4qn2" path="res://textures/projector_closed.png" id="3_1fb0u"]
[ext_resource type="Texture2D" uid="uid://bu5mheqdpy60p" path="res://textures/projector_broken.png" id="4_8flgr"]
[ext_resource type="Texture2D" uid="uid://bmwjkorvpa4ve" path="res://textures/projector_beam.png" id="4_kmjxh"]
[ext_resource type="Theme" uid="uid://bt3vq2xxetwgb" path="res://theme/theme.tres" id="5_fg58o"]
[ext_resource type="AudioStream" uid="uid://3qiirmmhsdje" path="res://sounds/projector_breaking.wav" id="5_le54k"]
[ext_resource type="Texture2D" uid="uid://s3r4cbsd5pp4" path="res://textures/wrench.png" id="7_nv8ws"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_titmn"]
size = Vector2(64, 64)

[sub_resource type="Animation" id="Animation_a3b7j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Wrench:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pk13v"]
resource_name = "repair"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Wrench:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lptos"]
_data = {
"RESET": SubResource("Animation_a3b7j"),
"repair": SubResource("Animation_pk13v")
}

[node name="Projector" type="Area2D" groups=["projector"]]
script = ExtResource("1_14a2k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_titmn")

[node name="SpriteOpen" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_eagai")

[node name="SpriteClosed" type="Sprite2D" parent="."]
visible = false
scale = Vector2(2, 2)
texture = ExtResource("3_1fb0u")

[node name="SpriteBroken" type="Sprite2D" parent="."]
visible = false
scale = Vector2(2, 2)
texture = ExtResource("4_8flgr")

[node name="Wrench" type="Sprite2D" parent="SpriteBroken"]
position = Vector2(29.5, 3)
texture = ExtResource("7_nv8ws")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="SpriteBroken"]
libraries = {
"": SubResource("AnimationLibrary_lptos")
}
autoplay = "repair"

[node name="LightBeam" type="PointLight2D" parent="."]
modulate = Color(1, 1, 1, 0.176471)
position = Vector2(0.000800133, 257)
rotation = 3.14159
color = Color(0.960784, 0.662745, 0.356863, 1)
texture = ExtResource("4_kmjxh")

[node name="LightArea" type="Area2D" parent="."]
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LightArea"]
polygon = PackedVector2Array(-52, 25, -102, 484, 1, 497, 102, 482, 52, 25)

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -40.0
offset_top = -88.0
offset_right = 40.0
offset_bottom = -70.0
theme = ExtResource("5_fg58o")
step = 1.0
show_percentage = false

[node name="BatAttractor" type="Marker2D" parent="."]
position = Vector2(0, 60)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_le54k")
volume_db = -6.0

[connection signal="body_entered" from="LightArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="LightArea" to="." method="_on_area_2d_body_exited"]
